--- a/contact.html
+++ b/contact.html
@@ -17,14 +17,17 @@
                 <a href="blog.html">Blog</a>
             </nav>
     </header>
-    <main>
-        <section id="contact" class="contact">
-            <h2>Contact Me</h2>
-            <p>Feel free to reach out to me via email or connect on social media!</p>
-            <p>Email: <a href="mailto:yourname@example.com">yourname@example.com</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile">linkedin.com/in/yourprofile</a></p>
-        </section>
-    </main>
+
+    <section id="contact" class="contact">
+        <h2>Contact Me</h2>
+        <p>Feel free to reach out to me via email or connect on social media!</p>
+        <p>Email: <a href="mailto:baizidul20@gmail.com">baizidul20@gmail.com</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/baizidul-islam-rupom-225436281?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bh2Kw6sAhRTSr4EmRECPh1A%3D%3D">linkedin.com/in/baizidul-islam-rupom</a></p>
+        <p>Facebook: <a href="https://www.facebook.com/profile.php?id=100093832435526">Baizidul Islam Rupom</a></p>
+        <p>Facebook Page: <a href="https://www.facebook.com/profile.php?id=100095143901647">Code with Baizid</a></p>
+        <p>GitHub: <a href="https://github.com/baizid20">baizid20</a></p>
+    </section>
+    
     <footer>
         <p>&copy; 2024 Your Name. All rights reserved.</p>
     </footer>
